--- a/style.css
+++ b/style.css
@@ -15,68 +15,46 @@ body
 }
 section 
 {
-    padding: 5rem 0;
+    padding-top: 10rem ;
 }
-.container
-{
-    width: 1500px;
-    margin: 0 auto;
-}
+
 img 
 {
     width: 100%;
-    max-width: 100%;
-    display: block;
+    max-width: 100%;   
 }
 
-/* ####################################################   Hero  css*/
-.hero__container
+.container
 {
-    width: 1044px;
-    padding: 5rem 0;
     margin: 0 auto;
 }
 
-.hero__container .lead
+/*########  HERO CSS  */
+.hero__container
 {
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 27px;
-    /* identical to box height */
-    
-    
-    color: #2D9CDB;
+    width: 932px;
+    padding: 3rem 0;
 }
-.hero__container p 
+.hero__container .lead 
 {
-    font-family: 'Poppins';
-font-style: normal;
-font-weight: 400;
-font-size: 18px;
-line-height: 27px;
-width: 366px;
-/* Gray 2 */
-margin: 3rem 0;
-color: #4F4F4F;
-}
-.hero__container h2 
-{
-    font-family: 'Poppins';
+font-family: 'Poppins';
 font-style: normal;
 font-weight: 500;
-font-size: 48px;
-line-height: 72px;
-width: 543px;
-/* Gray 1 */
-
-color: #333333;
-
+font-size: 18px;
+line-height: 27px;
+color: #2D9CDB;
 }
-
-
-.hero__container .small
+.hero__container p
+{
+    width: 366px;font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 27px;
+    color: #4F4F4F;
+    margin: 2rem 0;
+}
+.hero__container .small 
 {
 font-family: 'Poppins';
 font-style: normal;
@@ -84,160 +62,183 @@ font-weight: 500;
 font-size: 14px;
 line-height: 21px;
 color: #828282;
-margin: 2rem 0;
 }
-
+.hero__container h2 
+{
+font-family: 'Poppins';
+width: 543px;
+font-style: normal;
+font-weight: 500;
+font-size: 48px;
+line-height: 72px;
+color: #333333;
+}
 .hero__image__container
 {
-
-width: 1332px;
-margin: 0 auto;
-    
+    width: 1332px;
+}
+.hero__image__container img 
+{
+    border-radius: 18px;
+    height: 354px;
 }
 
 
-input::placeholder {
-    color: gray;
-    text-transform: capitalize;
-  }
-  
-  input {
-   
-   padding: 20px 30px;
-   background: #F2F2F2;
-   border-radius: 12px;
-   
-    font-size: 14px;
-    border-radius: 13px;
-    display: inline-block;
-    width: 350px;
-    border: none;
-    outline: none;
-    box-sizing: border-box;
-  }
+input[type="email"]
+{
+width: 350px;
+padding: 20px 30px;
+/* height: 57px; */
+background: #F2F2F2;
+border-radius: 12px;
+display: inline-block;
 
-  .form__div 
-  {
-     position: relative;
-  }
-   .btn
-  {
-     position: absolute;
-     top: 10%;
-     left: 24.33%;
-     background: #2D9CDB;
-     border-radius: 12px;
-     padding: 12px 30px;
-     color: #F2F2F2;
-  }
+}
 
-  /* ####################################################  Service css */
+.form__div a  
+{
+color: white;
+padding: 13px 30px;
+width: 94px;
+background: #2D9CDB;
+border-radius: 12px;
 
-  .service__contianer
-  {
-    width: 1205px;
-    margin: 0 auto;
-  }
+}
+::placeholder 
+{
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 500;
+font-size: 18px;
+line-height: 27px;
+color: #BDBDBD;
+}
 
-    .service__head p 
-    {
+
+/*##############  Service  CSS */
+.service__contianer
+{
+    width: 1099px;
+}
+
+.service__head p 
+{
     font-family: 'Poppins';
-    width: 346px;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 36px;
-    line-height: 54px;
-    color: #333333;
-    }
+font-style: normal;
+font-weight: 500;
+font-size: 36px;
+line-height: 54px;
+width: 346px;
+color: #333333;
+}
+.service__head ,.work__head
+{
+    padding-bottom: 2rem;
+}
+.service__bottom
+{
+    display: grid;
+    grid-template-columns:repeat(3,1fr);
+    gap: 2rem;
+}
+.service__box 
+{
+height: 422px;
+padding: 3rem;
 
-    .service__bottom 
-    {
-        display: grid;
-        grid-template-columns: repeat(3,1fr);
-        gap: 2rem;
-        margin-top: 40px;
-        margin-left: 40px;
-    }
-    .service__box
-    {
-        padding: 3rem;
-        
-        display: flex;
-        flex-direction: column;
-        gap: 2rem;
-    }
-    .service__box:hover
-    {
-        background: #FFFFFF;
-box-shadow: 0px 10px 30px rgba(51, 51, 51, 0.1);
 border-radius: 24px;
-    }
-    .service__box i 
-    {
-    background: #2D9CDB;
-    color: #fff;
-    border-radius: 10px;
-    width: 47px;
-    height: 47px;
+display: flex;
+flex-direction: column;
+gap: 2rem;
+}
+.service__box:hover
+{
+    background: #FFFFFF;
+    box-shadow: 0px 10px 30px rgba(51, 51, 51, 0.1);
+    border-radius: 24px;
+}
+.service__box i 
+{
+    width: 27px;
+    height: 27px;
+    border-radius: 16px;
+    padding: 2rem;
     display: flex;
     justify-content: center;
     align-items: center;
-   
-    }
-    .service__box:nth-child(1) i 
-    {
-        background: #2D9CDB;
-    }
-    .service__box:nth-child(2) i 
+    color:white;
+}
+.service__box:nth-child(1) i 
+{
+    background: #2D9CDB;
+}
+.service__box:nth-child(2) i 
 {
     background: #27AE60;
 }
 .service__box:nth-child(3) i 
 {
-
     background: #EB5757;
 }
-    .service__box h5 
-    {
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 36px;
-    color: #333333;
-    }
-    .service__box p 
-    {
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
-    color: #4F4F4F;
 
-    }
-    .service__button
-    {
-    width: 216px;
-    }
-    .btn-primary
-    {
-    background: #E0E0E0;
-    border-radius: 12px;
-    padding:10px 20px;
- 
-    text-align: center;
+.service__box h5 
+{
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 700;
+font-size: 24px;
+line-height: 36px;
+color: #333333;
+}
+.service__box p 
+{
     font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 24px;
-    color: #828282;
-   
-    }
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 24px;
 
-    .btn-primary:hover 
-    {
-        background: #2D9CDB;
-        color: white;
-    }
+/* Gray 2 */
+color: #4F4F4F;
+}
+
+.service__box .btn-primary
+{
+background: #E0E0E0;
+border-radius: 12px;
+padding: 10px 20px;
+
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 24px;
+
+/* identical to box height */
+
+color: #828282;
+}
+
+.service__box .btn-primary:hover 
+{
+    background: #2D9CDB;
+border-radius: 12px;
+color: white;
+}
+
+
+/*#################    Work CSS */
+.work__container
+{
+    width: 1099px;
+}
+.work__head p 
+{
+    font-family: 'Poppins';
+font-style: normal;
+font-weight: 500;
+font-size: 36px;
+line-height: 54px;
+width: 446px;
+color: #333333;
+}
