--- a/form.css
+++ b/form.css
@@ -1,35 +1,28 @@
-form {
-    display: flex;
-    flex-direction: column;
-    /* align-items: center; */
-    /* margin-top: 50px; */
-}
 
-/* label {
-    margin-bottom: 10px;
-    font-weight: bold;
-} */
+
 
 input[type="email"] {
-    padding: 20px 30px;
-    border-radius: 5px;
-    /* border: 1px solid gray; */
-    margin-bottom: 20px;
-    width: 300px;
-    font-size: 16px;
+
+    background-color: #F2F2F2;
     outline: none;
-   
+    border-radius: 12px;
+    border: none;
+    padding: 17px 17px;
+    width: 350px;
+    padding-right: 50px;
+  
 }
 
 input[type="submit"] {
-    padding: 15px 20px;
-    border-radius: 5px;
-    border: none;
-    background-color: #007bff;
-    color: white;
-    font-size: 16px;
-    cursor: pointer;
-    width: 10%;
+
+    background: #2D9CDB;
+    margin-left: -90px;
+border-radius: 12px;
+border: none;
+outline: none;
+color: white;
+padding: 14px 28px;
+cursor: pointer
 }
 
 input[type="submit"]:hover {
